<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:fitsSystemWindows="true"
    tools:context=".main.MainActivity">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/app_bar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/cl_app_bar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <ImageView-->
<!--                android:id="@+id/iv_back_arrow"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:srcCompat="@drawable/voice_logo" />-->

<!--            <TextView-->
<!--                android:id="@+id/tv_main"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:text="@string/jonli"-->
<!--                android:textColor="@color/teal_200"-->
<!--                android:textIsSelectable="false"-->
<!--                android:textSize="24sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintStart_toEndOf="@+id/iv_back_arrow"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--                        <ImageView-->
<!--                            android:id="@+id/iv_menu"-->
<!--                            android:layout_width="40dp"-->
<!--                            android:layout_height="40dp"-->
<!--                            android:layout_marginTop="4dp"-->
<!--                            android:layout_marginEnd="8dp"-->
<!--                            app:layout_constraintEnd_toEndOf="parent"-->
<!--                            app:layout_constraintLeft_toLeftOf="parent"-->
<!--                            app:layout_constraintTop_toTopOf="parent"-->
<!--                            app:srcCompat="@drawable/ic_baseline_reorder_24"-->
<!--                            />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/natija"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_email"
                app:strokeWidth="2dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ev_natija"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:freezesText="true"
                        android:hint="@string/text_yoziladi"
                        android:inputType="textMultiLine"
                        android:saveEnabled="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="Autofill" />


                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/play_btn"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_baseline_play_arrow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/audioni_eshitish"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/rasmni_korish"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="250dp"
                tools:ignore="ContentDescription" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/camera"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="2dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_photo_camera_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_a_photo"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/gallery"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="2dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_image_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>